# galaga

./: CMakeLists.txt  PROPOSAL.md  README.md
.eecs211/cmake/: CMakeLists.txt
.eecs211/lib/catch/: CMakeLists.txt
src/: main.cpp  model.cpp  model.h  view.cpp  view.h
test/: model_test.cpp
